# cme-mock-mdp

./: .gitignore  CLAUDE.md  CME_CHANNEL_310_INSTRUMENTS.md  CMakeLists.txt  DEBUGGING_METHODOLOGY.md  Makefile  README.md  SBE_ALIGNMENT_GUIDE.md  analyze_multi_message.cpp  analyze_packet_size  analyze_packet_size.cpp  analyze_sbe_structure  analyze_sbe_structure.cpp  cme-mock-server-design.md  cme_analysis_report.txt  cme_data_analyzer  cme_data_analyzer.cpp  cme_debug_function.cpp  cme_debug_function.h  debug_cme_data  debug_cme_data.cpp  debug_script.gdb  debug_snapshot_client  demo_scenarios.sh  list_instruments  lseg-fx-market-data-api-schema-v1.3.xml  lseg-fx-market-data-api-schema-v1.3_original.xml  quick_test.sh  test_132_byte_message  test_132_byte_message.cpp  test_alignment_fix  test_client  test_client.cpp  test_cme_integration.sh  test_config.json  test_correct_structure  test_debug_function  test_debug_function.cpp  test_final_size  test_final_size.cpp  (+15 more)
apps/cme_server/: cme_server_main.cpp
apps/reuters_server/: reuters_server_main.cpp  reuters_server_multicast_main.cpp
apps/unified_server/: native_json.h  simple_unified_server.cpp  unified_server_main.cpp
config/: reuters_config.json  server_config.json  unified_server_config.json
include/cme_sbe/: AdminLogin15.h  AdminLogout16.h  AggressorSide.h  GroupSize.h  InstAttribValue.h  MDEntryType.h  MDEntryTypeDailyStatistics.h  MDEntryTypeStatistics.h  MDIncrementalRefreshBookLongQty64.h  MDIncrementalRefreshOrderBook47.h  MDIncrementalRefreshTradeSummary48.h  MDIncrementalRefreshVolumeLongQty66.h  MDInstrumentDefinitionFuture54.h  MDInstrumentDefinitionRepo58.h  MoneyOrPar.h  OpenCloseSettlFlag.h  OrderUpdateAction.h  PRICE9.h  PRICENULL9.h  PutOrCall.h  SecurityAltIDSource.h  SecurityStatus30.h  SecurityStatusWorkup60.h  SecurityTradingStatus.h  SecurityUpdateAction.h  SettlPriceType.h  Side.h  SnapshotFullRefresh52.h  SnapshotFullRefreshLongQty69.h  SnapshotFullRefreshOrderBook53.h
include/config/: configuration.h
include/core/: market_data_generator.h  order_book.h  order_book_manager.h  reference_data.h
include/messages/: cme_sbe_encoder.h  instrument_encoder.h  mdp_messages.h  message_factory.h  sbe_decoder.h  sbe_encoder.h
include/network/: definition_feed_publisher.h  feed_publisher.h  udp_publisher.h  udp_receiver.h
include/scenarios/: market_scenario.h
include/utils/: hexdump.h  logger.h  packet_verifier.h
protocols/cme/include/: cme_encoder.h  cme_event_listener.h  cme_messages.h  cme_protocol_adapter.h
protocols/cme/include/cme_sbe/: AdminHeartbeat12.h  AggressorFlag.h  ChannelReset4.h  CollateralMarketValue62.h  Decimal9.h  Decimal9NULL.h  DecimalQty.h  EventType.h  GroupSize8Byte.h  HaltReason.h  LegSide.h  MDEntryTypeBook.h  MDIncrementalRefreshBook46.h  MDIncrementalRefreshDailyStatistics49.h  MDIncrementalRefreshLimitsBanding50.h  MDIncrementalRefreshSessionStatistics51.h  MDIncrementalRefreshSessionStatisticsLongQty67.h  MDIncrementalRefreshTradeSummaryLongQty65.h  MDIncrementalRefreshVolume37.h  MDInstrumentDefinitionFX63.h  MDInstrumentDefinitionFixedIncome57.h  MDInstrumentDefinitionOption55.h  MDInstrumentDefinitionSpread56.h  MDUpdateAction.h  MatchEventIndicator.h  MaturityMonthYear.h  MessageHeader.h  PriceSource.h  QuoteRequest39.h  RepoSubType.h  SecurityTradingEvent.h  SnapshotFullRefreshTCP61.h  SnapshotFullRefreshTCPLongQty68.h  SnapshotRefreshTopOrders59.h  WorkupTradingStatus.h
protocols/cme/src/: cme_encoder.cpp  cme_event_listener.cpp  cme_protocol_adapter.cpp
protocols/common/include/: protocol_adapter.h
protocols/common/src/: tcp_transport.cpp  udp_multicast_transport.cpp  udp_transport.cpp
protocols/reuters/include/: reuters_encoder.h  reuters_multicast_publisher.h  reuters_protocol_adapter.h
protocols/reuters/include/lseg_sbe/: AggressorSideEnum.h  BooleanEnum.h  Classification.h  Context.h  Credentials.h  DATA.h  DecimalEncoding.h  EncryptedWrap.h  EncryptionTypeEnum.h  EndOfConflation.h  EntryTypeEnum.h  Establish.h  ExDestinationEnum.h  FinishedSending.h  FlowTypeEnum.h  GroupSizeEncoding.h  HaltReasonEnum.h  Heartbeat.h  LegIDEnum.h  LegSecurityIDSourceEnum.h  MarketDataIncrementalRefresh.h  MarketDataRequest.h  MarketDataRequestRejection.h  MarketDataSnapshotFullRefresh.h  MarketSegmentIDEnum.h  Negotiate.h  (+27 more)
protocols/reuters/src/: reuters_encoder.cpp  reuters_protocol_adapter.cpp
protocols/utp/include/: utp_protocol_adapter.h  utp_simple.h
protocols/utp/src/: utp_protocol_adapter.cpp  utp_simple.cpp
scripts/: build.sh  test_end_to_end.sh  test_server.sh  test_system.sh  test_udp.sh
src/: main.cpp
src/config/: configuration.cpp
src/core/: market_data_generator.cpp  order_book.cpp  order_book_manager.cpp  reference_data.cpp
src/messages/: cme_sbe_encoder.cpp  instrument_encoder.cpp  message_factory.cpp  sbe_decoder.cpp  sbe_encoder.cpp
src/network/: definition_feed_publisher.cpp  feed_publisher.cpp  udp_publisher.cpp  udp_receiver.cpp
src/scenarios/: market_scenario.cpp
src/utils/: hexdump.cpp  logger.cpp  packet_verifier.cpp
test/: analyze_expected_format.cpp  cme_test_client.cpp  debug_client.cpp  debug_cme_format.cpp  debug_header_fields.cpp  debug_incremental.cpp  debug_packet_analyzer.cpp  debug_snapshot_client.cpp  debug_template_test.cpp  hex_printer.cpp  list_instruments.cpp  network_debug.cpp  simple_hex_capture.cpp  simple_ref_test.cpp  test_alignment_fix.cpp  test_buffer_issue.cpp  test_cme_sbe_encoder.cpp  test_correct_structure.cpp  test_current_encoding.cpp  test_fixed_packet_structure.cpp  test_full_packet.cpp  test_mdp_encoding.cpp  test_multi_message_packet.cpp  test_order_book.cpp  test_packet_header.cpp  test_packet_structure.cpp  test_reference_data.cpp  test_sbe_client.cpp  test_sbe_encoding.cpp  test_sbe_generated.cpp  test_scenarios.cpp  test_simple_sbe.cpp  test_udp_publisher.cpp  udp_receiver.cpp
test/reuters_client/: CMakeLists.txt  Client.cpp  Client.h  EstablishMsg.cpp  EstablishMsg.h  FIXMsg.cpp  FIXMsg.h  Main.cpp  NegotiateMsg.cpp  NegotiateMsg.h  TerminateMsg.cpp  TerminateMsg.h  endian_utils.h
